Fix spacing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -202,6 +202,9 @@ hr {
     font-size: 2rem;
     margin-bottom: 1rem;
   }
+  > li + li {
+    margin-top: 1rem;
+  }
   ul {
     padding-left: 1rem;
     list-style: none;
